--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,5 +19,7 @@ jobs:
       - name: Start SUT
         run: java -jar ./artifacts/app-order.jar & # Имя файла SUT будет отличаться в каждой задаче
       - name: Build with Gradle
-        run: ./gradlew test --info Dselenide.headless=true #  Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
+        build_script:
+          - ./gradlew test --info -Dselenide.headless=true
+        // run: ./gradlew test -Dselenide.headless=true #  Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
         #  в headless режиме -Dselenide.headless=true
